# CoolPotOS-idris2

./: .gitignore  README.md  flake.nix
.cargo/: config.toml
builder/: Cargo.toml
builder/assets/: bootriscv64.EFI  limine.conf
builder/src/: cargo.rs  image.rs  main.rs
builder/src/commands/: build.rs  clippy.rs  mod.rs  modules.rs  run.rs  test.rs
kernel/: Cargo.toml  build.rs  linker_riscv64.ld
kernel/idris/: kernel.ipkg
kernel/idris/src/: KernelMain.idr  Trap.idr
kernel/idris/src/Trap/: Core.idr  Handler.idr  Prim.idr  Runtime.idr
kernel/include/: idris_support.h  runtime.h
kernel/src/: allocator.rs  idris2_runtime.rs  lib.rs  main.rs  serial.rs
kernel/src/trap/: arch.rs  dispatch.rs  frame.rs  mod.rs  runtime.rs
